--- a/src/components/my-component/my-component.css
+++ b/src/components/my-component/my-component.css
@@ -1,7 +1,4 @@
 :host {
-  --some-value: green;
-}
-div {
-  --some-value: blue;
-  background-color: var(--some-value);
+  display: block;
+  border: 1px solid black;
 }
